force-app/main/default/objects/Contractor_Insurance_Policy__c/Contractor_Insurance_Policy__c.object-meta.xml
<CustomObject>
    <description>For tracking contractors insurance coverage details</description>
    <label>Contractor Insurance Policy</label>
    <nameField>
        <label>Contractor Insurance Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractor Insurance Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>