force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>The name of the Agency which carries the Contractors Insurance Policy</description>
    <inlineHelpText>Name of the Agency that Carries the Contractors Insurance Policy</inlineHelpText>
    <label>Agency Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>