force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <description>The Email for the Agent who services the Contractors Insurance Policy</description>
    <inlineHelpText>Email for the Agent who services the Contractors Insurance Policy</inlineHelpText>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>