force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Agent_Fax__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fax__c</fullName>
    <description>The Fax Number for the Agent who Services the Contractors Insurance Policy</description>
    <inlineHelpText>Fax Number for the Agent who Services the Contractors Insurance Policy</inlineHelpText>
    <label>Agent Fax</label>
    <type>Phone</type>
</CustomField>