force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>To capture the name of the Insurance Agent that services the Contractors Insurance Policy</description>
    <inlineHelpText>Name of Contractors Insurance Agent</inlineHelpText>
    <label>Agent Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>