force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone__c</fullName>
    <description>The Phone number for the Insurance Agent that Services the Contractors Insurance Poilicy</description>
    <inlineHelpText>Phone Number of Agent that Services the Contractors Insurance Policy</inlineHelpText>
    <label>Agent Phone</label>
    <type>Phone</type>
</CustomField>