force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Contractor_Insurance_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Insurance_Strategy__c</fullName>
    <description>The Insurance Strategy for the Contractor, whether TE Insures or the Contractor is Self Insured.</description>
    <inlineHelpText>Is Contractor Self Insured or using TaskEasy Policy?</inlineHelpText>
    <label>Contractor Insurance Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TE Insured</fullName>
            </value>
            <value>
                <fullName>Self Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>