force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Limit__c</fullName>
    <description>The Coverage Limit of the Contractors Insurance Policy</description>
    <inlineHelpText>Coverage Limit of the Contractors Insurance Policy</inlineHelpText>
    <label>Coverage Limit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>