force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Endorsements__c</fullName>
    <label>Endorsements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Insured</fullName>
            </value>
            <value>
                <fullName>Waiver of Subrogation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>