force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The Date in which a Contractors Insurance Policy Exprires</description>
    <inlineHelpText>The Date which a Contractors Insurance Policy Expires</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>