force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/GIL_Insurance_Verification_ID__c.field-meta.xml
<CustomField>
    <fullName>GIL_Insurance_Verification_ID__c</fullName>
    <externalId>true</externalId>
    <label>GIL Insurance Verification ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>