force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Grace_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Start_Date__c</fullName>
    <description>The date in which a Contractors Insurance Policy enters its Grace Period</description>
    <inlineHelpText>Date in which a Contractors Insurance Policy enters its Grace Period</inlineHelpText>
    <label>Grace Period Start Date</label>
    <type>Date</type>
</CustomField>