force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Insurance_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Name__c</fullName>
    <description>The Name of the Insurance Company that Indemnifies the Contractors Insurance Policy</description>
    <inlineHelpText>The Name of the Insurance Company that Indemnifies the Contractors Insurance Policy</inlineHelpText>
    <label>Insurance Company Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>