force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <description>The Type of Insurance that the Contractor Carries</description>
    <inlineHelpText>Type of Insurance that the Contractor Carries</inlineHelpText>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Occupational Accident</fullName>
            </value>
            <value>
                <fullName>Workers Comp State Policy</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>