force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Last_Expiration_Warning__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiration_Warning__c</fullName>
    <description>Date of the last expiration warning that was sent to the Contractor</description>
    <inlineHelpText>Date of last expiration warning that was sent to the Contractor</inlineHelpText>
    <label>Last Expiration Warning</label>
    <type>Date</type>
</CustomField>