force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Letter_ID__c.field-meta.xml
<CustomField>
    <fullName>Letter_ID__c</fullName>
    <label>Letter ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>