force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Policy_Expired__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expired__c</fullName>
    <formula>AND( 
Expiration_Date__c &lt; TODAY(),  ISPICKVAL(Contractor_Insurance_Strategy__c, &quot;Self Insured&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Expired</label>
    <type>Checkbox</type>
</CustomField>