force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>The Policy Number of the Contractors Insurance Policy</description>
    <inlineHelpText>Policy Number of the Contractors Insurance Policy</inlineHelpText>
    <label>Policy Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>