force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W9</fullName>
            </value>
            <value>
                <fullName>PR Tax Withholding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>