force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Taxpayer_ID__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_ID__c</fullName>
    <label>Taxpayer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>