force-app/main/default/objects/Contractor_Insurance_Policy__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <description>The date in which a contractors Insurance Coverage has been verified</description>
    <inlineHelpText>The Date which a Contractors Insurance Coverage has been verified</inlineHelpText>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>