force-app/main/default/objects/Contractor_Insurance_Policy__c/listViews/All_Contractor_Insurance_Policies.listView-meta.xml
<ListView>
    <fullName>All_Contractor_Insurance_Policies</fullName>
    <columns>NAME</columns>
    <columns>Policy_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contractor Insurance Policies</label>
</ListView>